--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
 		<title>Жнец-Пламегор DKP</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
